# RatCon

./: .gitignore  AGENTS.md  README.md  aggregator.py  clean_xps.py  compare_all_pairs.txt  grid.py  grid.yaml  luse  nuvole.txt  playground.ipynb  profile_train.py  pyproject.toml  requirements.txt  setup.cfg  tasks.md
.github/agents/: architectural-expert.agent.md  code-builder.agent.md  practice-expert.agent.md  reviewer-refactorer.agent.md  theory-expert.agent.md
exploration/: __init__.py  analyze_rationales.py  cluster_sentence_drift.py  pretty_print_rationales.py
exploration/exploration/: cluster_sentence_drift.jsonl
ratcon/: data.py  evaluate.py  inference.py  losses.py  metrics.py  models.py  train.py  utils.py
ratcon/conf/: config.yaml  default.yaml
ratcon/grids/: base_grid.py  conll.yaml  dual.yaml  dual_grid.py  grid.py  grid.yaml  patch_local.py  reference_sentence.yaml  sweep_grid.py
src/: compare.py  data.py  datasets_builders.py  dynamic_batch.py  eval.py  exploration.py  losses.py  metrics.py  models.py  nli_fun.py  retrival_fun.py  selector.py  sentence copy.py  sentence.py  train.py  utils.py  view.py
src/conf/: default.yaml
src/grids/: _history_utils.py  grid.py  reference_sentence.yaml
src/iolex.egg-info/: PKG-INFO  SOURCES.txt
src/ratcon.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
utils/: aggregate_xps.py  analyze.py  compare.py  compare_all_pairs.txt  deterministic.py  dora_utils.py  grid.py  grid.yaml  linearize.py  mask_nesting.py  mass_eval.py  ner.py  overview.py  rebuild.py  retrieval.py  retrival.py  subset_similarity.py  view_xps.py
(+18 files in other folders)
