[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratcon"
version = "0.1.0"
description = "Rationale selector models for branching trainers"
authors = [{ name = "RatCon Authors" }]
requires-python = ">=3.10"
dependencies = [
    "dora-search",
    "hydra-core",
    "transformers",
    "sentence-transformers",
    "datasets",
    "tabulate",
    "pandas",
    "pyyaml",
    "tqdm",
    "prettytable",
    "colorama"
]

[tool.setuptools.packages.find]
where = ["src"]
