[metadata]
name = ratcon
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
install_requires =
    conllu
    datasets
    dora-search
    hydra-core
    matplotlib
    nltk
    numpy
    omegaconf
    prettytable
    pyyaml
    scipy
    sentence-transformers
    tabulate
    torch
    tqdm
    transformers
    typing_extensions
python_requires = >=3.10

[options.packages.find]
where = src
